Fixed Fabric Dependency Issue
- Lowered Fabric Loader requirement from 0.18.4 to 0.16.0 for better modpack compatibility

This makes the mod compatible with more modpacks and older Fabric installations.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,15 @@ loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
 # Mod Properties
-mod_version=0.1.0-alpha
+mod_version=0.1.1-alpha
 maven_group=com.jpstudios.allthehud
 archives_base_name=allthehud
 
 # Dependencies
 fabric_api_version=0.116.7+1.21.1
+
+# Build File Properties
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx4G
