--- a/gradle-1.21.11.properties
+++ b/gradle-1.21.11.properties
@@ -5,10 +5,10 @@ org.gradle.parallel=true
 # IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
 
-# Fabric Properties
+# Fabric Properties for Minecraft 1.21.11
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.4
 loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
@@ -18,8 +18,8 @@ maven_group=com.jpstudios.allthehud
 archives_base_name=allthehud
 
 # Dependencies
-fabric_api_version=0.116.7+1.21.1
-modmenu_version=11.0.1
+fabric_api_version=0.140.2+1.21.11
+modmenu_version=13.0.0
 
 # Java version
 java_version=21
