--- a/gradle-1.21.11.properties
+++ b/gradle-1.21.11.properties
@@ -13,7 +13,7 @@ loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
 # Mod Properties
-mod_version=0.1.1-alpha
+mod_version=0.1.2
 maven_group=com.jpstudios.allthehud
 archives_base_name=allthehud
 
