--- a/gradle-1.20.1.properties
+++ b/gradle-1.20.1.properties
@@ -13,7 +13,7 @@ loader_version=0.15.11
 loom_version=1.9-SNAPSHOT
 
 # Mod Properties
-mod_version=0.1.1-alpha
+mod_version=0.1.2
 maven_group=com.jpstudios.allthehud
 archives_base_name=allthehud
 
