--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -133,8 +133,8 @@ jobs:
           curseforge-id: ${{ secrets.CURSEFORGE_PROJECT_ID }}
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
           files: publish/1.21.1/*.jar
-          name: ${{ env.RELEASE_NAME }}
-          version: ${{ env.RELEASE_TAG }}
+          name: "${{ env.RELEASE_TAG }}-1.21.1"
+          version: "${{ env.RELEASE_TAG }}-1.21.1"
           version-type: alpha
           changelog: ${{ env.RELEASE_BODY }}
           loaders: fabric
@@ -159,7 +159,7 @@ jobs:
           curseforge-id: ${{ secrets.CURSEFORGE_PROJECT_ID }}
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
           files: publish/1.20.1/*.jar
-          name: "${{ env.RELEASE_NAME }} (1.20.1)"
+          name: "${{ env.RELEASE_TAG }}-1.20.1"
           version: "${{ env.RELEASE_TAG }}-1.20.1"
           version-type: alpha
           changelog: ${{ env.RELEASE_BODY }}
