--- a/gradle-1.21.1.properties
+++ b/gradle-1.21.1.properties
@@ -5,12 +5,12 @@ org.gradle.parallel=true
 # IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
 
-# Fabric Properties for Minecraft 1.20.1
+# Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.15.11
-loom_version=1.9-SNAPSHOT
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.18.4
+loom_version=1.14-SNAPSHOT
 
 # Mod Properties
 mod_version=0.2.0-beta
@@ -18,12 +18,11 @@ maven_group=com.jpstudios.allthehud
 archives_base_name=allthehud
 
 # Dependencies
-# Fabric API 0.83.0 as requested, or use 0.92.3 for latest 1.20.1 compatible
-fabric_api_version=0.83.0+1.20.1
-modmenu_version=7.2.2
+fabric_api_version=0.116.7+1.21.1
+modmenu_version=11.0.1
 
-# Java version for 1.20.1
-java_version=17
+# Java version
+java_version=21
 
 # Build File Properties
 org.gradle.daemon=true
